@@ -1,0 +1,4 @@
+
+MAINTAINERCLEANFILES = Makefile.in
+
+EXTRA_DIST = config-msvc.h lo_endian-msvc.h premake4.exe premake4.lua
